--- a/index.html
+++ b/index.html
@@ -11,42 +11,42 @@
 <body>
     <div class="container">
         <div class="logo">
-            <a href="#!" target="_blank"><img src="img/logo.svg" alt=""></a>
+            <a href="https://keralex.ru/" target="_blank"><img src="img/logo.svg" alt=""></a>
         </div>
         <!-- <a class="title" href="#!" target="_blank">KERALEX</a>
         <a class="decription" href="https://mebel-kor.ru/" target="_blank">by protokeratin</a> -->
-        <a href="#!" target="_blank" class="button__block">
+        <a href="https://keralex.ru/" target="_blank" class="button__block">
             <i class="fa-solid fa-window-maximize"></i>
-            <div class="text site">Cайт</div>
-        <a href="#!" target="_blank" class="button__block">
+            <div class="text site">keralex.ru</div>
+        <a href="tel:+7(800)707-05-37" target="_blank" class="button__block">
             <i class="fa-solid fa-phone"></i>
-            <div class="text insta">+7 (900) 000-00-00</div>
-        <a href="mailto:mail@example.ru" target="_blank" class="button__block">
+            <div class="text insta">8 (800) 707-05-37</div>
+        <a href="mailto:info@protokeratin.ru" target="_blank" class="button__block">
             <i class="fa-solid fa-envelope"></i>
-            <div class="text vk"><p>mail@example.ru</p></div>
+            <div class="text vk"><p>info@protokeratin.ru</p></div>
         <a href="#!" target="_blank" class="button__block">
             <i class="fa-solid fa-location-dot"></i>
-            <div class="text insta">Адрес</div>
+            <div class="text insta">Маленковская улица, 32с2А</div>
         </a>
         <div class="number__block">
             <a href="#!" target="_blank" class="button__block style-2">
                 <i class="fa-brands custom-icon-wa"></i>
             </a>
-            <a href="tel:+79056060805" class="button__block style-2">
+            <a href="#!" class="button__block style-2">
                 <i class="fa-brands fa-telegram"></i>
             </a>
-            <a href="tel:+79056060805" class="button__block style-2">
+            <a href="https://vk.com/keralexprotokeratin" class="button__block style-2">
                 <i class="fa-brands custom-icon-vk"></i>
             </a>
         </div>
         <div class="number__block">
-            <a href="#!" target="_blank" class="button__block style-2">
+            <a href="https://www.wildberries.ru/seller/253061" target="_blank" class="button__block style-2">
                 <i class="fa-brands custom-icon-wb"></i>
             </a>
             <a href="tel:+79056060805" class="button__block style-2">
                 <i class="fa-brands custom-icon-inst"></i>
             </a>
-            <a href="tel:+79056060805" class="button__block style-2">
+            <a href="https://www.ozon.ru/seller/hairlook-125343/?miniapp=seller_125343" class="button__block style-2">
                 <i class="fa-brands custom-icon-ozon"></i>
             </a>
         </div>
