--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="text insta">Маленковская улица, 32с2А</div>
         </a>
         <div class="number__block">
-            <a href="#!" target="_blank" class="button__block style-2">
+            <a href="https://api.whatsapp.com/send?phone=79037163724&text=%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C%2C%20%D1%8F%20%D1%85%D0%BE%D1%87%D1%83..." target="_blank" class="button__block style-2">
                 <i class="fa-brands custom-icon-wa"></i>
             </a>
             <a href="#!" class="button__block style-2">
