--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="mailto:info@protokeratin.ru" target="_blank" class="button__block">
             <i class="fa-solid fa-envelope"></i>
             <div class="text vk"><p>info@protokeratin.ru</p></div>
-        <a href="#!" target="_blank" class="button__block">
+        <a href="https://yandex.ru/maps/-/CCUfeTspcA" target="_blank" class="button__block">
             <i class="fa-solid fa-location-dot"></i>
             <div class="text insta">Маленковская улица, 32с2А</div>
         </a>
