--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <a href="https://www.wildberries.ru/seller/253061" target="_blank" class="button__block style-2">
                 <i class="fa-brands custom-icon-wb"></i>
             </a>
-            <a href="tel:+79056060805" class="button__block style-2">
+            <!-- <a href="tel:+79056060805" class="button__block style-2">
                 <i class="fa-brands custom-icon-inst"></i>
-            </a>
+            </a> -->
             <a href="https://www.ozon.ru/seller/hairlook-125343/?miniapp=seller_125343" class="button__block style-2">
                 <i class="fa-brands custom-icon-ozon"></i>
             </a>
